--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  net_store:
+   git:
+     url: https://github.com/Benittostephen/NetStore.git
+     ref: develop
 
 dev_dependencies:
   flutter_test:
