--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,10 @@ dependencies:
    git:
      url: https://github.com/Benittostephen/NetStore.git
      ref: develop
+  subcate:
+   git:
+     url: https://github.com/Lesinselva/subcate.git
+     ref: main 
 
 dev_dependencies:
   flutter_test:
