--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,11 @@ flutter:
   # To add assets to your package, add an assets section, like this:
   assets:
     - lib/image/image.png
+    - lib/image/file.png
+    - lib/image/addcate.png
+    - lib/image/category.png
+    - lib/image/addproduct.png
+      
   #   - images/a_dot_ham.jpeg
   #
   # For details regarding assets in packages, see
